--- a/index.html
+++ b/index.html
@@ -1,3 +1,38 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>pbl3</title><style>body {
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="icon" href="/favicon.ico" />
+    <title>pbl3</title>
+    <style>
+      body {
         margin: 0;
-      }</style><link href="/css/chunk-3b66f208.2c8acbb2.css" rel="prefetch"><link href="/css/chunk-91535c3a.82bbf7f1.css" rel="prefetch"><link href="/css/chunk-b7ee5f64.c053c581.css" rel="prefetch"><link href="/js/chunk-3b66f208.2141ad47.js" rel="prefetch"><link href="/js/chunk-91535c3a.81d25555.js" rel="prefetch"><link href="/js/chunk-b7ee5f64.a5a2273d.js" rel="prefetch"><link href="/css/app.2dd8aca0.css" rel="preload" as="style"><link href="/css/chunk-vendors.b5f38799.css" rel="preload" as="style"><link href="/js/app.79ec3e7c.js" rel="preload" as="script"><link href="/js/chunk-vendors.e3556601.js" rel="preload" as="script"><link href="/css/chunk-vendors.b5f38799.css" rel="stylesheet"><link href="/css/app.2dd8aca0.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but pbl3 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.e3556601.js"></script><script src="/js/app.79ec3e7c.js"></script></body></html>
+      }
+    </style>
+    <link href="css/chunk-3b66f208.2c8acbb2.css" rel="prefetch" />
+    <link href="css/chunk-91535c3a.82bbf7f1.css" rel="prefetch" />
+    <link href="css/chunk-b7ee5f64.c053c581.css" rel="prefetch" />
+    <link href="js/chunk-3b66f208.2141ad47.js" rel="prefetch" />
+    <link href="js/chunk-91535c3a.81d25555.js" rel="prefetch" />
+    <link href="js/chunk-b7ee5f64.a5a2273d.js" rel="prefetch" />
+    <link href="css/app.2dd8aca0.css" rel="preload" as="style" />
+    <link href="css/chunk-vendors.b5f38799.css" rel="preload" as="style" />
+    <link href="js/app.79ec3e7c.js" rel="preload" as="script" />
+    <link href="js/chunk-vendors.e3556601.js" rel="preload" as="script" />
+    <link href="css/chunk-vendors.b5f38799.css" rel="stylesheet" />
+    <link href="css/app.2dd8aca0.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript
+      ><strong
+        >We're sorry but pbl3 doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong
+      ></noscript
+    >
+    <div id="app"></div>
+    <script src="js/chunk-vendors.e3556601.js"></script>
+    <script src="js/app.79ec3e7c.js"></script>
+  </body>
+</html>
